# -polymarket-copy-bot

./: .cursorignore  .cursorrules  .env.example  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  API_ENDPOINT_DISCOVERY.md  CHANGELOG.md  CIRCUIT_BREAKER_AUDIT_REPORT.md  CODEBASE_DOCUMENTATION.md  CODE_QUALITY_IMPROVEMENTS.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_TEST_COVERAGE_REPORT.md  CRITICAL_FIXES_ANALYSIS.md  CRITICAL_FIXES_PROGRESS.md  CURSOR_CONTEXT.md  DAILY_PROGRESS_SUMMARY.md  DEPENDENCY_FIX_SUMMARY.md  DEPENDENCY_MANAGEMENT.md  DEPLOYMENT_README.md  DEPLOYMENT_RUNBOOK.md  ENDGAME_CONFIG_DOCUMENTATION.md  ENDGAME_IMPLEMENTATION_SUMMARY.md  ENVIRONMENT_SETUP.md  EXCEPTION_HANDLING_IMPROVEMENTS.md  FINAL_DAILY_SUMMARY.md  FINAL_DELIVERY_SUMMARY.md  FIX_PRIORITIZATION_MATRIX.md  GAS_OPTIMIZATION_SUMMARY.md  HIGH_PERFORMANCE_SCANNER_GUIDE.md  HIGH_PERFORMANCE_SCANNER_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MARKET_ANALYZER_FIX_SUMMARY.md  MCP_CODEBASE_SEARCH_INTEGRATION.md  MCP_INTEGRATION_TEST_PLAN.md  MCP_PHASE2_COMPLETE.md  MCP_RISK_INTEGRATION_SUMMARY.md  MCP_SERVERS_REFERENCE.md  (+100 more)
.github/workflows/: ci.yml  (+5 more)
benchmarks/: memory_benchmark_20251228_115248.json  memory_benchmark_20251228_120349.json
config/: __init__.py  account_manager.py  accounts_config.py  mcp_config.py  scanner_config.py  settings.py  settings_fixed.py  settings_staging.py  wallets.json  wallets_staging.json
core/: adaptive_strategy_engine.py  backtesting_engine.py  behavioral_analyzer.py  circuit_breaker.py  clob_client.py  composite_scoring_engine.py  cross_market_arb.py  dynamic_position_sizer.py  endgame_sweeper.py  exceptions.py  historical_data_manager.py  hybrid_portfolio_constructor.py  market_condition_analyzer.py  market_maker_alerts.py  market_maker_backtester.py  market_maker_detector.py  market_maker_risk_manager.py  market_maker_tactics.py  ml_strategy_optimizer.py  parameter_optimizer.py  performance_analyzer.py  real_time_scorer.py  red_flag_detector.py  strategy_allocator.py  strategy_comparison.py  trade_executor.py  wallet_behavior_monitor.py  wallet_behavior_store.py  wallet_monitor.py  wallet_optimizer.py  wallet_quality_scorer.py  wallet_selector.py  websocket_benchmark.py  websocket_manager.py  websocket_wallet_monitor.py
docs/: CROSS_MARKET_ARB_INTEGRATION.md  CROSS_MARKET_ARB_SUMMARY.md  DEPLOYMENT_ROADMAP.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_STRATEGY_IMPLEMENTATION.md  STRATEGY_QUICK_START.md  build_docs.sh  conf.py  configuration.rst  index.rst  multi_account_setup.md  requirements.txt  style_guide.md  testing_strategy.md  websocket_migration.md
market_maker_dashboard/: market_maker_dashboard.txt
mcp/: README.md  __init__.py  codebase_search.py  main_mcp.py  monitoring_server.py  monitoring_server_enhanced.py  testing_server.py
monitoring/: alert_health_checker.py  copy_trading_dashboard.py  dashboard.py  market_maker_dashboard.py  monitor_all.py  monitoring_config.py  multi_account_dashboard.py  performance_benchmark.py  security_scanner.py
requirements/: requirements-development.txt  requirements-production.txt  requirements-staging.txt
risk_management/: rate_limiter.py  strategy_risk_manager.py  strategy_risk_manager_broken.py  strategy_risk_manager_v2.py
scanners/: high_performance_wallet_scanner.py  high_performance_wallet_scanner_v2.py  leaderboard_scanner.py  market_analyzer.py  wallet_analyzer.py
scripts/: access_control.sh  alerting_system.py  analyze_wallet_quality.py  application_monitor.py  application_security.sh  assess_incident_severity.sh  automated_maintenance.sh  backup_secure.sh  benchmark_high_performance_scanner.py  benchmark_memory_usage.py  benchmark_risk_management.py  check_current_state.py  check_env_template.py  compliance_audit.sh  deploy_application.sh  deploy_mcp_servers.sh  deploy_production_strategy.sh  diagnostic_check.py  disaster_recovery.sh  discover_api_endpoints.py  enhanced_logging.py  env_activate.sh  env_deactivate.sh  env_setup.sh  env_validate.sh  filesystem_security.sh  fix_all_issues.py  fix_complex_syntax.py  fix_composite_engine.py  fix_composite_final.py  fix_composite_scoring_direct.py  fix_print_statements.py  fix_syntax_errors_v2.py  format_code.sh  health_check.py  health_monitor.sh  high_availability.sh  incident_response.sh  initial_setup_and_scan.sh  monitor_staging.sh  (+23 more)
systemd/: polymarket-bot-monitoring.service  polymarket-bot-staging.service  polymarket-bot.service  polymarket-monitoring.service  polymarket-monitoring.timer
tests/: README.md  conftest.py  test_config_validation.py  test_linter_config.py  test_mcp_risk_integration.py  test_monitoring.py  test_multi_account_integration.py
trading/: gas_optimizer.py
utils/: alerts.py  bounded_cache.py  dependency_manager.py  env_repair.py  environment_manager.py  exception_handler.py  financial_calculations.py  gas_visualization.py  health_check.py  helpers.py  logger.py  logging_config.py  logging_security.py  logging_utils.py  multi_env_manager.py  performance_monitor.py  rate_limited_client.py  security.py  time_utils.py  validation.py
wallet_quality_analysis/: quality_ranking_report.txt  quality_ranking_results.json
(+124 files in other folders)
